--- a/contact.html
+++ b/contact.html
@@ -35,11 +35,64 @@
       width: auto;  
       padding: 10px 20px; 
     }
+
+    /* Animation styles */
+    .fade-in {
+      opacity: 0;
+      animation: fadeIn 0.8s forwards;
+    }
+
+    .slide-up {
+      transform: translateY(20px);
+      opacity: 0;
+      animation: slideUp 0.8s forwards;
+    }
+
+    .animated-btn {
+      position: relative;
+      overflow: hidden;
+    }
+
+    .animated-btn:after {
+      content: '';
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 300%;
+      height: 300%;
+      background: rgba(255, 255, 255, 0.3);
+      border-radius: 50%;
+      transform: translate(-50%, -50%) scale(0);
+      animation: ripple 0.6s linear infinite;
+    }
+
+    @keyframes fadeIn {
+      to {
+        opacity: 1;
+      }
+    }
+
+    @keyframes slideUp {
+      to {
+        transform: translateY(0);
+        opacity: 1;
+      }
+    }
+
+    @keyframes ripple {
+      0% {
+        transform: translate(-50%, -50%) scale(0);
+      }
+      100% {
+        transform: translate(-50%, -50%) scale(1);
+        opacity: 0;
+      }
+    }
   </style>
 </head>
 <body>
   
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary fade-in" data-animate>
     <a class="navbar-brand" href="index.html">Career Advice Blog</a>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto">
@@ -57,9 +110,9 @@
   </nav>
 
   
-  <div class="content-wrapper">
+  <div class="content-wrapper fade-in" data-animate>
     
-    <div class="card form-card">
+    <div class="card form-card slide-up" data-animate>
       <h1 class="text-center">Contact Us</h1>
       <p class="text-center">If you have any questions or inquiries, feel free to reach out to us!</p>
 
@@ -76,18 +129,33 @@
           <label for="message">Your Message</label>
           <textarea class="form-control" id="message" rows="4" placeholder="Write your message here..."></textarea>
         </div>
-        <center><button type="submit" class="btn btn-primary btn-custom">Send Message</button></center>
+        <center><button type="submit" class="btn btn-primary btn-custom animated-btn">Send Message</button></center>
         
       </form>
     </div>
   </div>
 
-  <footer class="bg-dark text-white text-center py-3">
+  <footer class="bg-dark text-white text-center py-3 fade-in" data-animate>
     <p>&copy; 2024 Mpumi Nicollete Mahlalela | All rights reserved</p>
   </footer>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script>
+    // Animation on scroll and load
+    function animateOnScroll() {
+      const elements = document.querySelectorAll('[data-animate]');
+      const windowHeight = window.innerHeight;
+      elements.forEach(el => {
+        const rect = el.getBoundingClientRect();
+        if (rect.top < windowHeight - 50) {
+          el.classList.add('animated');
+        }
+      });
+    }
+    document.addEventListener('DOMContentLoaded', animateOnScroll);
+    window.addEventListener('scroll', animateOnScroll);
+  </script>
 </body>
 </html>
