--- a/linkedin-tips.html
+++ b/linkedin-tips.html
@@ -75,25 +75,36 @@
             transform: translateX(0);
         }
 
+        /* Card animation */
+        .animated-card {
+            opacity: 0;
+            transform: translateY(10px);
+            transition: opacity 0.6s, transform 0.6s;
+        }
+        .animated-card.animated {
+            opacity: 1;
+            transform: translateY(0);
+        }
+
     </style>
 </head>
 <body>
-
-    <div class="container mt-4 fade-in" data-animate>
-        <div class="row center-content">
-            <div class="col-md-4">
-                <img src="images/linked.png" class="img-side slide-up" data-animate alt="LinkedIn Profile Tips">
-            </div>
-            <div class="col-md-8">
-                <h2 class="slide-up" data-animate>LinkedIn Profile Tips</h2>
-                <ul class="list-group">
-                    <li class="list-group-item">
+    <div class="container mt-4">
+        <a href="index.html" class="btn btn-secondary mb-4 animated-btn fade-in" data-animate>&larr; Back</a>
+    </div>
+    <div class="container mt-5 d-flex justify-content-center align-items-center min-vh-100">
+        <div class="card shadow-lg rounded animated-card fade-in" data-animate style="max-width: 700px; width: 100%;">
+            <img src="images/linked.png" class="card-img-top slide-up" data-animate alt="LinkedIn Profile Tips">
+            <div class="card-body">
+                <h2 class="card-title text-center slide-up" data-animate>LinkedIn Profile Tips</h2>
+                <ul class="list-group list-group-flush mb-3">
+                    <li class="list-group-item bg-transparent border-0">
                         <button class="btn btn-link animated-btn" onclick="toggleContent('content-1')">Tip 1: Use a Professional Profile Picture</button>
                     </li>
-                    <li class="list-group-item">
+                    <li class="list-group-item bg-transparent border-0">
                         <button class="btn btn-link animated-btn" onclick="toggleContent('content-2')">Tip 2: Optimize Your Headline</button>
                     </li>
-                    <li class="list-group-item">
+                    <li class="list-group-item bg-transparent border-0">
                         <button class="btn btn-link animated-btn" onclick="toggleContent('content-3')">Tip 3: Highlight Key Skills</button>
                     </li>
                 </ul>
@@ -109,10 +120,8 @@
             </div>
         </div>
     </div>
-
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
-
     <script>
         function toggleContent(contentId) {
             const content = document.getElementById(contentId);
