--- a/resume-tips.html
+++ b/resume-tips.html
@@ -77,6 +77,9 @@
     </style>
 </head>
 <body>
+    <div class="container mt-4">
+        <a href="index.html" class="btn btn-secondary mb-4 animated-btn fade-in" data-animate>&larr; Back</a>
+    </div>
     <div class="container mt-5 d-flex justify-content-center align-items-center min-vh-100">
         <div class="card shadow-lg rounded animated-card fade-in" data-animate style="max-width: 700px; width: 100%;">
             <img src="images/CV.png" class="card-img-top slide-up" data-animate alt="Resume Tips">
