--- a/interview-tips.html
+++ b/interview-tips.html
@@ -94,6 +94,25 @@
     </style>
 </head>
 <body>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary fade-in" data-animate>
+    <a class="navbar-brand" href="index.html">Career Advice Blog</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="index.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="about.html">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">Contact</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
     <div class="container mt-4">
         <a href="index.html" class="btn btn-secondary mb-4 animated-btn fade-in" data-animate>&larr; Back</a>
     </div>
