--- a/linkedin-tips.html
+++ b/linkedin-tips.html
@@ -91,9 +91,6 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fade-in" data-animate>
     <a class="navbar-brand" href="index.html">Career Advice Blog</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
@@ -131,7 +128,7 @@
                     <p>Use a high-quality, professional profile picture that clearly shows your face. A strong profile photo increases the likelihood of being viewed and contacted by potential employers or connections.</p>
                 </div>
                 <div id="content-2" class="content-section slide-up" data-animate>
-                    <p>Your headline should reflect your current role and expertise. It’s important to be clear about what you do so potential employers or recruiters can quickly identify your value.</p>
+                    <p>Your headline should reflect your current role and expertise. It's important to be clear about what you do so potential employers or recruiters can quickly identify your value.</p>
                 </div>
                 <div id="content-3" class="content-section slide-up" data-animate>
                     <p>List relevant skills and expertise that make you stand out in your field. Skills help you show up in relevant searches and attract the right connections or job opportunities.</p>
